tests/examples/errors/InvalidKeycode.hkf
module exporting ()

alias foo = "wrong"
